--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <title>flashcar</title>
 </head>
 <body>
-    ,<section>id="container">
+    <section id="container">
             <article class="cartao">
                  <div class="cartao__conteudo">
                     <h3>programação</h3>
                       <div class="cartao__conteudo__pergunta">
                         O que é JavaScript?
+                      </div>
+                      <div class="cartao__conteudo__resposta">
+                        o JavaScript é uma linguagem de programação
                       </div>
                  </div>
             </article>
